/**************************************************
  Coppermine 1.5.x Plugin - sef_urls
  *************************************************
  Copyright (c) 2003-2007 Coppermine Dev Team
  *************************************************
  This program is free software; you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation; either version 3 of the License, or
  (at your option) any later version.
  ********************************************
  $HeadURL$
  $Revision$
  $LastChangedBy$
  $Date$
  **************************************************/

Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2010-06-10 [O] Further improved speaking URLs for albums {Timo}
2010-06-09 [B] Fixed search bug {Timo}
2010-06-09 [B] Fixed display bug for favpics album {Timo}
2010-06-09 [A] Added speaking URLs functionality for thumbnail pages and user profiles {Timo}
2010-06-07 [B] Fixed keyword search URLs {Timo}
2010-06-05 [C] Removed multiple underscores {Timo}
2010-06-05 [A] Nicer german umlauts in URL {Timo}
2010-06-05 [O] Improved performance replacing preg_replace by str_replace where possible) {Timo}
2010-06-05 [A] Added support for italian transliteration {Timo}
2010-06-05 [A] Added speaking URLs functionality, showing pic title or filename in URL {Timo}
2010-02-03 [M] Increased version number to 1.8 {Timo}
2010-02-03 [A] Added experimental localisation support for french and spanish {Timo}
2010-02-03 [M] Increased version number to 1.7 {Timo}
2010-02-03 [O] Removed sort string from german htaccess (not used) {Timo}
2010-02-03 [O] Removed slideshow rules - not relevant for search engines {Timo}