@@ -2,7 +2,7 @@
 /**************************************************
   Coppermine 1.5.x Plugin - sef_urls
   *************************************************
-  Copyright (c) 2003-2007 Coppermine Dev Team
+  Copyright (c) 2003-2010 Coppermine Dev Team
   *************************************************
   This program is free software; you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
@@ -15,11 +15,32 @@
   $Date$
   **************************************************/
 
-$name = 'Search Engine Friendly URLs';
-$description = 'Makes SEF URLs for index, thumbnails, and displayimage.php. (Apache webserver only!)<br />Warning: this plugin is still experimental, there are known issues when using it. Test thoroughly and use at your own risk.<br />When getting unexpected results, disable the plugin and remove the .htaccess file the plugin creates manually (using your FTP app).';
-$author = 'Coppermine Development Team';
-$version = '2.0beta4';
+if (!defined('IN_COPPERMINE')) {
+    die('Not in Coppermine...');
+}
+  
+require_once './plugins/sef_urls/lang/english.php';
+if ($CONFIG['lang'] != 'english' && file_exists('./plugins/sef_urls/lang/' . $CONFIG['lang'] . '.php')) {
+    require_once './plugins/sef_urls/lang/' . $CONFIG['lang'] . '.php';
+}
+  
+$name = $lang_plugin_sef_urls['name'];
+$description = <<< EOT
+{$lang_plugin_sef_urls['description']}<br />
+{$lang_plugin_sef_urls['known_issues_warning']}
+EOT;
+$author = 'Coppermine Developer Team';
+$version = '2.1';
 $plugin_cpg_version = array('min' => '1.5');
-$install_info = "If anything goes wrong when installing this plugin and you cannot access your gallery at all anymore, it's a good idea to remove the .htaccess file in the root of your gallery and deleting the plugin via FTP.";
-$extra_info = '<span class="admin_menu external"><a href="http://forum.coppermine-gallery.net/index.php/topic,42568.0.html" rel="external" title="SEF URLs support">SEF_URLs announcement thread</a></span>';
+$announcement_thread_link = <<< EOT
+<a href="http://forum.coppermine-gallery.net/index.php/topic,42568.0.html" rel="external" class="admin_menu">{$lang_plugin_sef_urls['announcement_thread']}</a>
+EOT;
+$configuration_link = 'a href="">' . sprintf($lang_plugin_sef_urls['configure_x'], $lang_plugin_sef_urls['name']) . '</a>';
+$install_info = <<< EOT
+{$lang_plugin_sef_urls['recovery_instructions']}<br />
+{$announcement_thread_link}
+EOT;
+$extra_info = <<< EOT
+{$announcement_thread_link} {$configuration_link}
+EOT;
 ?>
