@@ -1,7 +1,7 @@
 /**************************************************
   Coppermine 1.5.x Plugin - sef_urls
   *************************************************
-  Copyright (c) 2003-2007 Coppermine Dev Team
+  Copyright (c) 2003-2010 Coppermine Dev Team
   *************************************************
   This program is free software; you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
